Fix vertical alignment issue in tag editor

--- a/leitstand-ui-web/src/main/resources/META-INF/resources/ui/css/leitstand/leitstand.css
+++ b/leitstand-ui-web/src/main/resources/META-INF/resources/ui/css/leitstand/leitstand.css
@@ -565,10 +565,11 @@ ol.tags {
 	vertical-align: middle;
 }
 
-ul.tags li,
-ol.tags li{
+ul.tags li.tag,
+ol.tags li.tag {
 	display:inline;
-	background-color: #2d5c9b; /*#4078c0;*/
+	background-color: #2d5c9b;
+	border-radius: 2px;
 	list-style-type: none;
 	padding: 2px 5px;
 	margin: 0px 5px;
@@ -576,68 +577,49 @@ ol.tags li{
 	font-weight: bold;
 }
 
-.tag-editor ol.tags{
-	display: inline;	
-	vertical-align: middle;
-}
 
-.tag-editor ol.tags li.tag{
-	display:inline;
-	background-color: white; 
-	list-style-type: none;
-	margin: 0px 3px;
-	position: relative;
-}
-
-.tag-editor ol.tags li.tag{
-	position:relative;
-	background-color: #2d5c9b; /*#4078c0; */
+.tag-editor div.tags div {
 	display: inline-block;
-	height: 26px;
-	border-radius: 3px;
+	background-color: #2d5c9b;
+	border-radius: 4px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	padding-left: 10px;
 	margin-right: 10px;
-	padding: 5px;
-	margin-top: 10px;
+	vertical-align:middle;
+	cursor: default;
 }
 
-.tag-editor ol.tags li span{
-	margin-right: 30px;
+.tag-editor div.tags div span {
 	display: inline-block;
 	vertical-align: middle;
-	margin-top: -4px;
+	font-weight: bold;
+	color: white;
 }
 
-.tag-editor ol.tags li.tag button{
-	position:absolute;
-	top: 0;
-	right: 0;
-	border-radius: 0px 3px 3px 0px;
+.tag-editor div.tags div input.form-control{
+	background-color: #fafafa;
 }
 
-.tag-editor span{
+.tag-editor div.tags div input.form-control:focus{
+	background-color: #fff;
+}
+
+.tag-editor div.tags div button {
+	vertical-align: middle;
 	display: inline-block;
-	margin-top: 10px;
-}
-
-.tag-editor span button{
+	height: 34px;
+	width: 34px;
 	border-radius: 0px 3px 3px 0px;
-	position: absolute;
-	top: -1px;
-	right: 0px;
+	margin-left: 10px;
 }
 
-.tag-editor span input{
-	width: 100%;
-	display: block;
-	border-radius: 3px;
-	border: 1px solid #e5e5e5;
-	padding: 7px 30px 7px 8px;
-	width: 7em;
-	display:inline-block; 
-	vertical-align: middle; 
-	height: 26px;
-	padding-right: 30px;
-	margin-top: -1px;
+.tag-editor div.tags div:last-child {
+	padding-left: 0px;
+}
+
+.tag-editor div.tags div:last-child button {
+	margin-left: -2px;
 }
 
 /** Image and package details*/
